--- a/style.css
+++ b/style.css
@@ -9,14 +9,88 @@
 * {
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
 }
 
+.root {
+    --font-primary: "Roboto", serif;
+}
+
+.hamburguer {
+    /*background-color: #0F2027;*/
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+
+
+}
+.show-menu .hamburguer{
+    right:16rem;
+}
+.line {
+    width: 100%;
+    background-color: #fff;
+    height: .1rem;
+    box-shadow: 0.1rem 0.1rem 1px #000;
+    transition: transform 1s;
+
+}
+.show-menu #line1{
+transform: rotate(45deg) translate(.3rem, .45rem);
+}
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+.show-menu #line3{
+    transform: rotate(-45deg) translate(.3rem, -.45rem);
+
+}
+.hamburguer span{
+    position: absolute;
+    left: 3rem;
+    background-color: #0F2027;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(194, 193, 193);
+    font-family: var(--font-primary);
+    text-transform: uppercase;
+    text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
+    opacity: 0;
+}
+
+.hamburguer span::before{
+    content:"";
+    position: absolute;
+    
+    border-right: .5rem solid #0F2027;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+.show-menu .hamburguer:hover span{
+    opacity: 1;
+
+}
 header {
     width: 100%;
     height: 100vh;
     overflow: hidden;
     position: relative;
 }
+
 .img-wrapper {
 
     width: 100%;
@@ -34,14 +108,17 @@ header {
     animation: zoom 15s;
 
 }
-@keyframes zoom{
-    0%{
+
+@keyframes zoom {
+    0% {
         transform: scale(1.3);
     }
-    100%{
+
+    100% {
         transform: scale(1);
     }
 }
+
 .banner {
     position: absolute;
     top: 30%;
@@ -51,29 +128,30 @@ header {
 .banner h1 {
     color: rgb(199, 199, 199);
     font-size: 3.5rem;
-    font-family: "Roboto", serif;
+    font-family: var(--font-primary);
     font-weight: 200;
     text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
     line-height: 4rem;
     margin-bottom: 2rem;
     animation: moveBanner 1s 0.5s forwards;
     opacity: 0;
-    
+
 }
 
 @keyframes moveBanner {
-    0%{
+    0% {
         transform: translateY(10rem) rotateY(-30deg);
-        
+
     }
-    100%{
+
+    100% {
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
-    }
+}
 
 .banner p {
-    font-family: "Roboto" serif;
+    font-family: var(--font-primary);
     color: rgb(194, 193, 193);
     font-size: 2rem;
     text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
@@ -83,7 +161,7 @@ header {
 }
 
 .banner button {
-    font-family: "Roboto" serif;
+    font-family: var(--font-primary);
     color: rgb(194, 193, 193);
     letter-spacing: .1rem;
     text-transform: uppercase;
@@ -99,13 +177,79 @@ header {
     cursor: pointer;
     animation: moveBanner 1s 0.9s forwards;
     opacity: 0;
+    transition: color 1s;
 
 }
 
 .banner button:hover {
     opacity: 0.8;
-    color: black;
+    color: #0F2027
+}
 
+.sidebar {
+    width: 20rem;
+    height: 100vh;
+    background-color: #203A43;
+    position: fixed;
+    right: 0;
+    top: 0;
+    right: -20rem;
+    transition: all 1s;
 }
 
 
+.show-menu .sidebar {
+    right: 0;
+
+}
+
+.menu {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
+.menu-item {
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.reng-link {
+    font-family: var(--font primary);
+    font-size: 2rem;
+    color: rgb(194, 193, 193);
+    text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
+    transition: color 1s;
+}
+
+.reng-link:hover {
+    color: #0F2027
+}
+
+.social-media {
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    /* background-color: aliceblue;*/
+    display: flex;
+    justify-content: space-around
+}
+
+.social-media i {
+
+    color: rgb(194, 193, 193);
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
+    transition: color 1s;
+
+}
+
+.social-media i:hover {
+    color: #0F2027
+}
